--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://kit.fontawesome.com/aa4f9c504d.js" crossorigin="anonymous"></script>
     <title>Keepr </title>
   </head>
-  <body>
+  <body class="bg-info">
     <noscript>
       <strong
         >We're sorry but wwwsrc doesn't work properly without JavaScript
